# virtuawin-bar

./: .clang-format  .gitignore  CMakeLists.txt  README.md  vwbar.ini
src/: bar.cpp  bar.h  config.cpp  config.h  handler.cpp  handler.h  logging.h  macros.h  main.cpp  movement.cpp  movement.h  tiling.cpp  tiling.h
src/VirtuaWin/: defines.h  messages.h
